[workspace]
members = [
  "wallet",
  "filecoin",
  "payments",
  "graphsync",
  "dag_service",
  "blockstore",
  "data_transfer",
  "routing",

]

[package]
name = "pop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pop"
path = "src/native/bin/main.rs"
required-features = ["native"]


[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.libp2p]
version = "0.42.0"
default-features = true
features = ["wasm-ext"]

[dependencies]
libipld = "0.13.1"
rand = { version = "0.7", features = ["wasm-bindgen"] }
async-std = { version = "1.6.2", features = ["attributes", "unstable"] }
filecoin = { path = "./filecoin", default_features = false }
graphsync = { path = "./graphsync", default_features = false }
dag_service = { path = "./dag_service", default_features = false }
blockstore = { path = "./blockstore", default_features = false }
data_transfer = { path = "./data_transfer", default_features = false }
serde = { version = "1.0", features = ["derive"] }
instant = "0.1.12"
futures = "0.3.19"
futures-lite = "1.12.0"
thiserror = "1.0"
parity-send-wrapper = { version = "0.1.0", optional = true }
parking_lot = "0.11"
lazy_static = "1.4.0"
bimap = "0.6.2"
serde_repr = "0.1"
smallvec = "1.8.0"
serde_tuple = "0.5"
dirs="4.0.0"

#  discovery and routing related
routing = { path = "./routing", default_features = false, optional=true }

# for peer id persistence on native nodes
wallet = { path = "./wallet", default_features = false, optional=true }

#  cli related imports
warp = { version = "0.3.2", optional = true }
clap = { version = "3.0.14", optional = true }
reqwest = { version = "0.11.9", optional = true, features = ["json"] }

getrandom = { version = "0.2", features = ["js"] }

log = { version = "0.4.14" }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
libp2p-wasm-ext = { version = "0.31.0", features = [
  "websocket",
], optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
console_log = { version = "0.1.2", optional = true }
web-sys = { version = "0.3.56", optional = true }
js-sys = { version = "0.3.56", optional = true }
hyper = { version = "0.14", features = ["stream"], optional = true }

# Side effects and Replacements
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }
rand6 = { package = "rand", version = "0.6", features = [
  "wasm-bindgen",
], optional = true }
futures-timer = { version = "3.0.1", features = [
  "wasm-bindgen",
], optional = true }
chrono = { version = "0.4", features = ["wasmbind"], optional = true }
unixfs-v1 = { version = "0.2.1", optional = true }
gloo-file = { version = "0.2.1", optional = true }

[features]
default = ["native"]
native = [
  "blockstore/native",
  "graphsync/native",
  "dag_service/native",
  "data_transfer/native",
  "filecoin/native",
  "routing/native",
  "warp",
  "hyper",
  "clap",
  "reqwest",
  "async-std/tokio1",
  "wallet"
]
browser = [
  "libp2p-wasm-ext",
  "wasm-bindgen",
  "wasm-bindgen/serde-serialize",
  "wasm-bindgen-futures",
  "console_log",
  "console_error_panic_hook",
  "rand6",
  "web-sys/WebSocket",
  "web-sys/BinaryType",
  "web-sys/Blob",
  "web-sys/ErrorEvent",
  "web-sys/MessageEvent",
  "web-sys/Worker",
  "web-sys/DedicatedWorkerGlobalScope",
  "web-sys/Event",
  "web-sys/File",
  "web-sys/ReadableStream",
  "web-sys/Blob",
  "web-sys/Response",
  "web-sys/ResponseInit",
  "web-sys/CacheStorage",
  "web-sys/Cache",
  "js-sys",
  "unixfs-v1",
  "gloo-file",
  "parity-send-wrapper",
  # "rand",
  "instant/wasm-bindgen",
  "futures-timer",
  "chrono",
  "blockstore/browser",
  "graphsync/browser",
  "data_transfer/browser",
  "dag_service/browser",
  "filecoin/browser",
]
