[package]
name = "bitswap"
version = "0.21.0"
authors = ["Myel <alex@myel.dev>"]
edition = "2021"

[features]
default = ["native"]
compat = ["prost", "prost-build"]
native = ["blockstore/native"]
browser = ["blockstore/browser"]


[build-dependencies]

[dependencies.libp2p]
version = "0.42.1"
default-features = true
features = ["wasm-ext", "request-response"]

[dependencies]
async-trait = "0.1.52"
fnv = "1.0.7"
futures = "0.3.19"
lazy_static = "1.4.0"
libipld = "0.13.1"
prometheus = "0.13.0"
prost = { version = "0.9.0", optional = true }
thiserror = "1.0.30"
tracing = "0.1.29"
unsigned-varint = { version = "0.7.1", features = ["futures", "std"] }
blockstore = {path ='../blockstore', default_features=false}
prost-build = { version = "0.9.0", optional = true }


[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
env_logger = "0.9.0"
multihash = { version = "0.14.0", default-features = false, features = ["blake3"] }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
