[package]
name = "blockstore"
version = "0.1.0"
authors = ["Myel <alex@myel.dev>"]
edition = "2021"

[dependencies]
parking_lot = "0.11"
thiserror = "1.0"
serde_cbor = { package = "cs_serde_cbor", version = "0.12", features = [
  "tags",
] }
libipld = "0.12"
num_cpus = "1.13"
async-trait = "0.1"

rocksdb = { version = "0.15.0", optional = true }


[features]
default = ["native"]
native = ["rocksdb"]
browser = ["parking_lot/wasm-bindgen"]
