[package]
name = "dag_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libipld = "0.12"
unixfs-v1 = "0.2.1"
blockstore = { path = "../blockstore", default_features = false }
futures = "0.3.19"


[dev-dependencies]
rand = { version = "0.7", features = ["wasm-bindgen"] }

[features]
default = ["native"]
native = ["blockstore/native"]
browser = ["blockstore/browser"]
