[package]
name = "data_transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.libp2p]
version = "0.42.0"
default-features = true
features = ["wasm-ext"]


[dependencies]
futures = "0.3.19"
futures-lite = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = { package = "cs_serde_cbor", version = "0.12", features = [
  "tags",
] }
serde_repr = "0.1"
serde_tuple = "0.5"
serde_bytes = { package = "cs_serde_bytes", version = "0.12" }
filecoin = { path = "../filecoin", default_features = false }
graphsync = { path = "../graphsync", default_features = false }
blockstore = { path = "../blockstore", default_features = false }
num-bigint = { package = "forest_bigint", version = "0.1.1", features = [
  "json",
] }
libipld = "0.13.1"
smallvec = "1.8.0"
instant = "0.1.12"
utf16_lit = "2.0.2"
byteorder = "1.4.3"
log = { version = "0.4.14" }

[dev-dependencies]
hex = "0.4.3"
async-std = { version = "1.6.2", features = ["attributes", "unstable"] }
rand = { version = "0.7", features = ["wasm-bindgen"] }
dag_service = { path = "../dag_service" }
criterion = { version = "0.3", features = ["async_futures", "async_std"] }

[features]
default = ["native"]
native = ["filecoin/native", "graphsync/native", "blockstore/native"]
browser = [
  "filecoin/browser",
  "graphsync/browser",
  "blockstore/browser",
  "instant/wasm-bindgen",
]

[[bench]]
name = "e2e"
harness = false
