[package]
name = "filecoin"
version = "0.1.0"
authors = ["Myel <alex@myel.dev>"]
edition = "2021"

[dependencies]
address = { package = "forest_address", version = "0.3", features = ["json"] }
async-std = { version = "1.9", features = ["attributes"] }
base64 = { version = "0.13" }
log = "0.4.8"
num-bigint = { package = "forest_bigint", version = "0.1.1", features = [
  "json",
] }
once_cell = "1.7.2"
serde= { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
serde_tuple = "0.5"
serde_bytes = { package = "cs_serde_bytes", version = "0.12" }
serde_cbor = { package = "cs_serde_cbor", version = "0.12", features = [
  "tags",
] }
surf = "2.2.0"
crypto = { package = "forest_crypto", version = "0.5", features = [
  "json",
  "blst",
] }
fil_types = { optional = true, version = "0.2" }
lazy_static = "1.4.0"
derive_builder = "0.9"
libipld = "0.12"
libsecp256k1 = "0.6"
num-traits = "0.2"
num-derive = "0.3.0"
thiserror = "1.0"
blake2b_simd = "1.0"

[dependencies.jsonrpc-v2]
default-features = false
features = ["easy-errors", "macros", "bytes-v05"]
version = "0.10.1"


[dev-dependencies]
rand = "0.7.3"
rand_chacha = "0.2.2"
