[package]
name = "graphsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.libp2p]
version = "0.42.0"
default-features = true
features = ["wasm-ext"]

[dependencies]
futures = "0.3.19"
futures-lite = "1.12.0"
async-std = { version = "1.6.2", features = ["attributes", "unstable"] }
serde = { version = "1.0", features = ["derive"] }
libipld = "0.12"
async-recursion = "0.3.1"
async-trait = "0.1"
thiserror = "1.0"
serde_cbor = { package = "cs_serde_cbor", version = "0.12", features = [
  "tags",
] }
hex = "0.4.3"
fnv = "1.0.6"
protobuf = "2.25.2"
integer-encoding = { version = "3.0", default-features = false }
smallvec = "1.8.0"
instant = "0.1.11"
crossbeam-channel = "0.5.2"
rand = { version = "0.7", features = ["wasm-bindgen"] }

[build-dependencies]
protoc-rust = "2.25.2"

[dev-dependencies]
serde_json = "1.0"
dag_service = { path = "../dag_service" }
