[package]
name = "routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.libp2p]
version = "0.42.0"
default-features = true
features = ["wasm-ext"]

[dependencies]
futures = "0.3.19"
futures-lite = "1.12.0"
data_transfer = { path = "../data_transfer", default_features = false }
async-std = { version = "1.6.2", features = ["attributes", "unstable"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
thiserror = "1.0"
serde_cbor = { package = "cs_serde_cbor", version = "0.12", features = [
  "tags",
] }
hex = "0.4.3"
fnv = "1.0.6"
smallvec = "1.8.0"
instant = "0.1.12"
rand = { version = "0.7", features = ["wasm-bindgen"] }
serde_tuple = "0.5"
libipld = "0.12"
filecoin = { path = "../filecoin", default_features = false }
lazy_static = "1.4.0"
blockstore = { path = "../blockstore", default_features = false }
graphsync = { path = "../graphsync", default_features = false }



[build-dependencies]
protoc-rust = "2.25.2"

[dev-dependencies]
serde_json = "1.0"
dag_service = { path = "../dag_service" }
criterion = { version = "0.3", features = ["async_futures", "async_std"] }


[features]
default = ["native"]
native = ["filecoin/native", "data_transfer/native", "blockstore/native", "graphsync/native"]
browser = ["instant/wasm-bindgen", "filecoin/browser", "data_transfer/browser", "blockstore/browser", "graphsync/browser"]
