[package]
name = "wallet"
version = "0.1.0"
authors = ["Myel <alex@myel.dev>"]
edition = "2021"

[package.metadata.docs.rs]
features = ["json"]

[dependencies]
thiserror = "1.0"
address = { package = "forest_address", version = "0.3" }
crypto = { package = "forest_crypto", version = "0.5", features = [
  "json",
  "blst",
] }
bls-signatures = { version = "0.9", default-features = false, features = [
  "blst",
] }
libsecp256k1 = "0.3.4"
rand = "0.7.3"
encoding = { package = "forest_encoding", version = "0.2.1" }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
serde_json = "1.0.57"
log = "0.4.8"
libc = "0.2"

[features]
json = ["crypto/json"]
