[package]
name = "wallet"
version = "0.1.0"
authors = ["Myel <alex@myel.dev>"]
edition = "2021"

[package.metadata.docs.rs]
features = ["json"]

[dependencies]
thiserror = "1.0"
address = { package = "forest_address", version = "0.3" }
filecoin = { path = "../filecoin" }
libsecp256k1 = "0.3.4"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
serde_json = "1.0.57"
log = "0.4.8"
libc = "0.2"
libipld = "0.12"
slice_as_array = { version = "1.1.0", default-features = false }
serde_tuple = "0.5"

# [features]
# json = ["crypto/json"]
